ella-parser/src/parser/snapshots/ella_parser__parser__expr__tests__binary-associativity-2.snap
---
source: ella-parser/src/parser/expr.rs
expression: "expr(\"a = b = c\")"
---
Expr {
    kind: Binary {
        lhs: Expr {
            kind: Identifier(
                "a",
            ),
            span: 0..1,
        },
        op: Equals,
        rhs: Expr {
            kind: Binary {
                lhs: Expr {
                    kind: Identifier(
                        "b",
                    ),
                    span: 4..5,
                },
                op: Equals,
                rhs: Expr {
                    kind: Identifier(
                        "c",
                    ),
                    span: 8..9,
                },
            },
            span: 4..9,
        },
    },
    span: 0..9,
}
