ella-parser/src/parser/snapshots/ella_parser__parser__expr__tests__binary-associativity.snap
---
source: ella-parser/src/parser/expr.rs
expression: "expr(\"2 * 2 * 2\")"
---
Expr {
    kind: Binary {
        lhs: Expr {
            kind: Binary {
                lhs: Expr {
                    kind: NumberLit(
                        2.0,
                    ),
                    span: 0..1,
                },
                op: Asterisk,
                rhs: Expr {
                    kind: NumberLit(
                        2.0,
                    ),
                    span: 4..5,
                },
            },
            span: 0..5,
        },
        op: Asterisk,
        rhs: Expr {
            kind: NumberLit(
                2.0,
            ),
            span: 8..9,
        },
    },
    span: 0..9,
}
