ella-parser/src/parser/snapshots/ella_parser__parser__expr__tests__binary-equality.snap
---
source: ella-parser/src/parser/expr.rs
expression: "expr(\"1 == 2 - 1\")"
---
Expr {
    kind: Binary {
        lhs: Expr {
            kind: NumberLit(
                1.0,
            ),
            span: 0..1,
        },
        op: EqualsEquals,
        rhs: Expr {
            kind: Binary {
                lhs: Expr {
                    kind: NumberLit(
                        2.0,
                    ),
                    span: 5..6,
                },
                op: Minus,
                rhs: Expr {
                    kind: NumberLit(
                        1.0,
                    ),
                    span: 9..10,
                },
            },
            span: 5..10,
        },
    },
    span: 0..10,
}
