ella-parser/src/parser/snapshots/ella_parser__parser__expr__tests__binary.snap
---
source: ella-parser/src/parser/expr.rs
expression: "expr(\"1 + 1\")"
---
Expr {
    kind: Binary {
        lhs: Expr {
            kind: NumberLit(
                1.0,
            ),
            span: 0..1,
        },
        op: Plus,
        rhs: Expr {
            kind: NumberLit(
                1.0,
            ),
            span: 4..5,
        },
    },
    span: 0..5,
}
