ella-parser/src/parser/snapshots/ella_parser__parser__expr__tests__double-2.0.snap
---
source: ella-parser/src/parser/expr.rs
expression: "expr(\"2.0\")"
---
Expr {
    kind: NumberLit(
        2.0,
    ),
    span: 0..3,
}
