ella-parser/src/parser/snapshots/ella_parser__parser__expr__tests__empty-string.snap
---
source: ella-parser/src/parser/expr.rs
expression: "expr(r#\"\"\"\"#)"
---
Expr {
    kind: StringLit(
        "",
    ),
    span: 0..2,
}
